# jana-eko-client

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCIES.md  RATE_LIMIT_HANDLING_IMPLEMENTATION_PLAN.md  README.md  TESTING.md  TEST_RESULTS.md  jana_eko_client_test_suite.ipynb  pip_installable_library_from_repo_for_dummies.md  pyproject.toml  quick_test.py  remove_eko_client_from_jana.sh  requirements.txt  test_async_client.py  test_client.py  test_jupyter_compatibility.py
.github/workflows/: nightly-contract.yml
ADRs/: 0001-nest-asyncio-jupyter-compatibility.md  README.md  template.md
async_design_docs/: Async_Query_Architecture_Design.md
eko_client/: __init__.py  admin_client.py  auth.py  client.py  exceptions.py  jwt_auth.py  models.py  sync_wrapper.py  user_client.py  utils.py
eko_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_notebooks/: README.md  climate_science_policy_esg_research_agenda.ipynb  climatetrace_data_summary_v2.ipynb  esg_investment_intelligence.ipynb  nepal_data_analysis.ipynb  openaq_data_summary.ipynb
tests/: conftest.py  test_admin_client.py  test_auth_mixin.py  test_base_client.py  test_exceptions.py  test_jwt_auth.py  test_models.py  test_pagination.py  test_sync_wrapper.py  test_user_client.py  test_utils.py
tests/contract/: __init__.py  _harness.py  conftest.py  test_climatetrace.py
tests/integration/: __init__.py  conftest.py  test_climatetrace_live.py
