[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jana-eko-client"
version = "0.2.0"
description = "Python client library for Jana Earth Unified Environmental Data API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jana Earth Data", email = "contact@jana.earth"}
]
keywords = ["environmental", "data", "api", "openaq", "climate", "trace", "edgar", "esg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Jana-Earth-Data/jana-eko-client"
Documentation = "https://docs.jana.earth"
Repository = "https://github.com/Jana-Earth-Data/jana-eko-client"
Issues = "https://github.com/Jana-Earth-Data/jana-eko-client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eko_client*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["eko_client"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py38"

